I deleted the old photo, added a new one, in the header.css I made changes on #header, where i put position and z-index// in index.html i fixed img-wrapper and added img element in it, then fixed everything around the img-wrapper and the img in it in the about.css

--- a/styles/all-styles/about.css
+++ b/styles/all-styles/about.css
@@ -30,14 +30,21 @@
 #about .img-wrapper {
     width: 430px;
     height: 430px;
-    background-image: url(../../images/IMG_6808-removebg-preview.png);
-    background-repeat: no-repeat;
-    background-position: -5rem;
-    background-size: cover;
-    background-color: black;
     border-radius: 100%;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0px 0px 39px 5px rgba(205, 113, 50, 1);
+    z-index: 1; 
+}
+
+#about .img-wrapper img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    object-fit: cover;
+    transform: scale(2.6) translateX(2%);
 }
 
 @media screen and (max-width:1150px) {
