--- a/styles/all-styles/header.css
+++ b/styles/all-styles/header.css
@@ -14,6 +14,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 100px;
+    position: relative;
+    z-index: 2;
 }
 
 #header i {
